--- a/estilo.css
+++ b/estilo.css
@@ -82,6 +82,7 @@ body{
     font-size: 13px;
     color: #1a161f;
     margin-top: 10px;
+    padding: 10px;
 }
 .card .links {
     position: absolute;
